# reactormq

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  LICENSE  README.md  build_tsan.sh  xmake.lua
Source/ReactorMQ/: ReactorMQ.Build.cs
Source/ReactorMQ/Private/: ITickableReactorMQClient.h  LogReactorMQ.h  ReactorMQ.cpp  ReactorMQBuildConfig.h  ReactorMQClient.cpp  ReactorMQClient.h  ReactorMQClientPool.cpp  ReactorMQClientPool.h  ReactorMQTypeMappings.cpp  ReactorMQTypeMappings.h
Source/ReactorMQ/Public/: IReactorMQClient.h  ReactorMQ.h  ReactorMQClientHandle.h  ReactorMQConnectionSettings.h  ReactorMQCredentials.h  ReactorMQMessage.h  ReactorMQResult.h  ReactorMQSubscribeResult.h  ReactorMQThreading.h  ReactorMQTopicFilter.h  ReactorMQTypes.h  ReactorMQUnsubscribeResult.h
cmake/: Engine.cmake  Platform.cmake  SSL.cmake  Sanitizers.cmake  Socket.cmake  Sony.cmake  msan_ignorelist.txt  reactormqConfig.cmake.in
cmake/engine/: O3DE.cmake
cmake/platform/: Android.cmake  GDK.cmake  Linux.cmake  MacOS.cmake  Prospero.cmake  Switch.cmake  Windows.cmake  iOS.cmake
cmake/platform/families/: ConsoleFamily.cmake  DarwinFamily.cmake  NintendoFamily.cmake  PlaystationFamily.cmake  PosixFamily.cmake  WindowsFamily.cmake
include/reactormq/: export.h
include/reactormq/mqtt/: client.h  client_factory.h  connect_return_code.h  connectable_async.h  connection_protocol.h  connection_settings.h  connection_settings_builder.h  credentials.h  credentials_provider.h  delegates.h  disconnectable_async.h  message.h  protocol_version.h  publishable_async.h  quality_of_service.h  reason_code.h  result.h  retain_handling_options.h  state.h  subscribable_async.h  subscribe_result.h  subscribe_return_code.h  topic_filter.h  unsubscribable_async.h  unsubscribe_result.h
scripts/: cleanup-debug.bat  cleanup-debug.sh  fuzz-build.bat  fuzz-build.sh  fuzz-run.bat  fuzz-run.sh  package-o3de.bat  package-o3de.sh  package-standard.bat  package-standard.sh  package-unreal.bat  package-unreal.sh  setup-o3de-debug.bat  setup-o3de-debug.sh  setup-unreal-debug.bat  setup-unreal-debug.sh
shim/prospero/: ctype.h  dirent.h  netdb.h  pthread.h  signal.h  stdio.h  syslog.h  unistd.h
shim/prospero/netinet/: in.h
shim/prospero/sys/: endian.h  ioctl.h  socket.h
src/config/: platform_config.h
src/mqtt/: connection_settings_builder.cpp
src/mqtt/client/: backoff.cpp  backoff.h  client_factory.cpp  client_factory.h  client_impl.cpp  client_impl.h  command.h  context.cpp  context.h  mqtt_version_mapping.cpp  mqtt_version_mapping.h  reactor.cpp  reactor.h  timer.h
src/mqtt/packets/: auth.cpp  auth.h  conn_ack.cpp  conn_ack.h  connect.cpp  connect.h  disconnect.cpp  disconnect.h  fixed_header.h  packet_type.h  ping_req.cpp  ping_req.h  ping_resp.cpp  ping_resp.h  pub_ack.cpp  pub_ack.h  pub_comp.cpp  pub_comp.h  pub_rec.cpp  pub_rec.h  pub_rel.cpp  pub_rel.h  publish.cpp  publish.h  sub_ack.cpp  sub_ack.h  subscribe.cpp  subscribe.h  unsub_ack.cpp  unsub_ack.h  unsubscribe.cpp  unsubscribe.h
src/serialize/: bytes.h  endian.h  mqtt_codec.h  serializable.h
src/socket/: secure_socket.cpp  secure_socket.h  socket.cpp  socket.h  socket_base.cpp  socket_base.h  socket_delegate_mixin.h  socket_state.h  socket_tickable.h
src/socket/native/: native_socket.cpp  native_socket.h  native_tcp_socket.cpp  native_tcp_socket.h  native_tls_socket.cpp  native_tls_socket.h
src/socket/o3de/: o3de_socket.cpp  o3de_socket.h
src/socket/platform/: bio_secure_socket.cpp  darwin_trust_anchor_set.cpp  native_secure_socket.cpp  platform.h  platform_secure_socket.h  platform_socket.h  posix_socket.cpp  posix_trust_anchor_set.cpp  receive_flags.h  socket_error.h  sony_socket.cpp  trust_anchor_set.h  ue5_socket.cpp  win_socket.cpp  win_trust_anchor_set.cpp
src/socket/ue5/: ue5_socket.cpp  ue5_socket.h  ue5_websocket.cpp  ue5_websocket.h
src/util/logging/: console_sink.cpp  console_sink.h  file_sink.cpp  file_sink.h  log_level.h  log_message.h  logging.cpp  logging.h  registry.cpp  registry.h  sink.h  ue_log_sink.cpp  ue_log_sink.h
tests/: CMakeLists.txt  test_main.cpp
tests/fixtures/: docker_container.cpp  docker_container.h  echo_server.h  port_utils.h  socket_runnable.h  test_utils.h
tests/fuzz/: CMakeLists.txt  README.md  fuzz_connect_packet.cpp  fuzz_fixed_header.cpp  fuzz_mqtt_codec.cpp  fuzz_publish_packet.cpp  fuzz_variable_byte_integer.cpp  mqtt.dict
tests/integration/mqtt/: test_client_integration_async.cpp
tests/integration/net/: socket_tcp.cpp  socket_tls.cpp
tests/memory/: test_leak_detection.cpp
tests/stress/: test_concurrent_commands.cpp
tests/unit/client/: test_backoff_calculator.cpp  test_client_factory.cpp  test_client_impl.cpp  test_command_variant.cpp  test_context.cpp  test_reactor.cpp  test_state_transition.cpp  test_timer.cpp
tests/unit/logging/: test_logging.cpp
tests/unit/net/: create_socket_factory_test.cpp  o3de_socket_test.cpp  platform_socket.cpp  socket_base_tests.cpp  socket_mqtt_framing.cpp  socket_runnable_tests.cpp
tests/unit/packets/: test_auth.cpp  test_conn_ack.cpp  test_connect.cpp  test_control_packet_base.cpp  test_disconnect.cpp  test_fixed_header.cpp  test_ping_req.cpp  test_ping_resp.cpp  test_properties.cpp  test_property.cpp  test_pub_ack.cpp  test_pub_comp.cpp  test_pub_rec.cpp  test_pub_rel.cpp  test_publish.cpp  test_sub_ack.cpp  test_subscribe.cpp  test_unsub_ack.cpp  test_unsubscribe.cpp
tests/unit/public_interface/: test_connection_settings.cpp  test_credentials.cpp  test_credentials_provider.cpp  test_enums.cpp  test_multicast_delegate.cpp  test_multicast_delegate_reentrancy.cpp  test_result.cpp  test_topic_filter.cpp  test_unsubscribe_result.cpp
tests/unit/serialization/: test_bytes.cpp  test_mqtt_codec.cpp  test_variable_byte_integer.cpp
unreal_engine/: ReactorMQ.uplugin
xmake/modules/: defaults.lua  flags.lua  helpers.lua  logging.lua  option_resolver.lua  options.lua  platform_detect.lua  reactormq_auto_defaults.lua  sources.lua  ssl.lua
xmake/toolchains/: prospero.lua
(+217 files in other folders)
